Thu Mar 08 04:54:14 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.9.

Thu Mar 08 04:45:20 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* perl/t/document.t,perl/t/index.t: Add tests of Document::get_docid().

Thu Mar 08 03:45:14 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* php/smoketest.php: Add a test that Query ctor taking OP_NEAR with a
	  window size works.

Thu Mar 08 03:35:36 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* python/testsuite2.py: Don't run off the traceback looking for a
	  test function if the exception wasn't from a test function.

Thu Mar 08 03:33:19 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Fix test for jni.h to try looking for jni.h relative to
	  the real location of javac, which should work for more JDKs.

Wed Feb 29 11:01:39 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Thu Dec 22 13:11:22 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* configure.ac: Fix cosmetic typo in recent Lua change.
	* configure.ac,lua/Makefile.am: Remove Lua cygwin-specific configure
	  code and -DUSE_LUA_STUBS - both were copied from the Tcl support
	  with Tcl changed to Lua, and have no basis in reality that I can
	  find.
	* configure.ac,lua/Makefile.am: Improve probing for LUA_LIB, and also
	  probe for LUA_SO so we support platforms where the compiled Lua
	  module isn't called .so.
	* configure.ac: Improve LUA_LIB description and probe message - the
	  module won't have an ".so" extension on all platforms.
	* configure.ac: m4 quoting tweaks (cosmetic only).
	* configure.ac: Honour LUA_LIB if already set.  Fixes #581.

Thu Dec 22 13:04:51 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* lua/docs/index.html,lua/generate-lua-exceptions,lua/smoketest.lua,
	  lua/util.i: Handle an exception from C++ by raising a xapian.Error 